--- a/templates/home.html
+++ b/templates/home.html
@@ -18,9 +18,6 @@
                 <img src="assets/img/Petshop DH-logo-white 1.png" alt="Logo petshop">
             </a>
             <nav>
-                <form action="" method="get">
-                    <input type="search" name="trecho" id="trecho">
-                </form>
                 <ul>
                     <li>
                         <a href="home.html">Pets</a>
@@ -32,6 +29,12 @@
                         <a href="index.html">Logout</a>
                     </li>
                 </ul>
+                <form action="" method="get" class="busca">
+                    <input type="search" name="trecho" id="trecho" placeholder="Busca por pet">
+                    <button type="submit">
+                        <i class="fa-solid fa-magnifying-glass fa-xl"></i>
+                    </button>
+                </form>
             </nav>
         </div>
     </header>
