--- a/templates/home.html
+++ b/templates/home.html
@@ -25,9 +25,6 @@
                     <li>
                         <a href="usuarios.html">Usuários</a>
                     </li>
-                    <li>
-                        <a href="index.html">Logout</a>
-                    </li>
                 </ul>
                 <form action="" method="get" class="busca">
                     <input type="search" name="trecho" id="trecho" placeholder="Busca por pet">
@@ -36,6 +33,17 @@
                     </button>
                 </form>
             </nav>
+        </div>
+        <div class="subheader">
+            <div class="container">
+                <div class=""welcome>
+                    Bem vindo, Adalberto Cerqueira
+                </div>
+                <div class="controles">
+                    <a href="#" title="Editar Perfil"><i class="fa-solid fa-user-pen fa-xl"></i></a>
+                    <a href="#" title="Sair"><i class="fa-solid fa-right-from-bracket fa-xl"></i></a>
+                </div>
+            </div>
         </div>
     </header>
 
