Mudando o título da página de pet

--- a/templates/pet.html
+++ b/templates/pet.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Petshop - Login</title>
+    <title>Petshop - Nome do Pet</title>
     <script src="https://kit.fontawesome.com/90a414e190.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/geral.css">
     <link rel="stylesheet" href="assets/css/pet.css">
