Criando página add-pet mostrando arquivo selecionado

--- a/templates/assets/css/geral.css
+++ b/templates/assets/css/geral.css
@@ -18,11 +18,14 @@
     color: #FFF;
     cursor: pointer;
     display: inline-block;
+    border: none;
 }
 
 .botao.primario{
     background-color: var(--primaria);
 }
+
+
 input[type=search],
 input[type=text],
 input[type=email],
