--- a/templates/assets/css/pet-add.css
+++ b/templates/assets/css/pet-add.css
@@ -1,14 +1,19 @@
 main {
     display: flex;
-    gap: 40px;
+    
     margin-top: 40px;
     margin-bottom: 40px;
+    background-color: aqua;
+}
+
+main>*{
+    width: 50%;
 }
 
 #display-foto {
     position: relative;
-    width: 360px;
-    height: 360px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     cursor: pointer;
 }
@@ -21,12 +26,30 @@ main label[for=foto] div{
     width: 100%;
     text-align: center;
     position: absolute;
-    top: 240px;
+    bottom: 20px;
     cursor: pointer;
 }
 
 #foto {
     display: none;
+}
+
+.form-item{
+    margin-bottom: 10px;
+}
+
+.form-item select,
+.form-item input[type=text] {
+    width: 200px;
+}
+.form-item input[type=date] {
+    width: 200px;
+}
+
+.cadastre form{
+    background-color: var(--secundaria);
+    padding: 40px;
+    color: #FFF;
 }
 
 
