Consertando o layout de página de vacinar

--- a/templates/pet-vacinar.html
+++ b/templates/pet-vacinar.html
@@ -51,7 +51,7 @@
     <main class="container">
         
         
-        <img src="assets/img/pets/pet2.jpg" id="display-foto" alt="Foto de Nome do Pet">
+        <img src="assets/img/pets/pet1.webp" id="display-foto" alt="Foto de Nome do Pet">
         
         <section class="vacine">
             
